--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
 
     <!-- endregion -->
 
+    <string name="main_btn_game">2048</string>
+
+    <string name="main_btn_anim">Анімації</string>
+
 </resources>
